@@ -1,3 +1,9 @@
+2006-10-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Fix modulation for changed dvbsrc parameter enum format.
+	Do the videoscale after videorate.
+
 2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
